# Home-Computer

./: .gitignore  .gitmodules  README.md
.github/workflows/: cad.yml  drc.yml  erc.yml  exports.yml
Concept/: Block Diagram Gen1.drawio  Block Diagram Gen2.drawio  Block Diagram.dot  Block Diagram.drawio  Brainstorming.md  Case Draft.scad  Collection.md  Expansion Boards.md  Pin Assignments.md  Pitch.md  Prototyping.md  Southbridge Architecture.md  Southbridge2.md  gpu-numbers.py
Concept/Project/: Pricetable.md  bom.yml  costs.py  fetch-pcb-cost.py
Hardware/: .gitignore  Drawing Sheet.kicad_wks  Home Computer.bak  Home Computer.kicad_sym  justfile
Hardware/Backplane/: .gitignore  Backplane.csv  Backplane.kicad_pcb  Backplane.kicad_prl  Backplane.kicad_pro  Backplane.kicad_sch  Backplane.xml  builtins.kicad_sch  clock.kicad_sch  clock_gate.kicad_sch  expansions.kicad_sch  fp-info-cache  fp-lib-table  justfile  mgmt_ctrl.kicad_sch  module_slot.kicad_sch  power.kicad_sch  reset_gate.kicad_sch  sym-lib-table  usb-hub-x4.kicad_sch  usb-port-terminator.kicad_sch  usb.kicad_sch  usb_socket.kicad_sch
Hardware/Case-Experiments/: README.md  c-5-5530843-0-f-3d.stl  c-5530843-6-f-3d.stl  c-7-5530843-5-f-3d.stl  common.scad  justfile  simplecase-v2.scad  visuals.scad
Prototyping/: .gitignore  README.md  flake.nix  justfile
Prototyping/propio/: CMakeLists.txt
Prototyping/propio/src/: main.cpp  propio-client.pasm  propio.pio
Prototyping/rp2350-hdmi/: CMakeLists.txt
Prototyping/rp2350-hdmi/src/: main.c
Prototyping/rp2350-hdmi/src/img/: convert.py  mountains_640x480_rgb332.h  mountains_800x480_rgb332.h
Prototyping/rp2350-psram/: CMakeLists.txt  default-map.txt
Prototyping/rp2350-psram/src/: genprint.py  main.c  printers.h
Scripts/: ComputePrice.py  DigiKey.py  ExpCard.py  SymLibGen.py  part-db.json
Specs/: Expansion Bus.md  Expansion Cards.md  Expansion Vendors.md  README.md
(+185 files in other folders)
